Akka backend for tasklist with frontEnd

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,5 +9,7 @@
     <br>
     <div>
         Dynamic <a href='@routes.Application.admin'>configuration</a>
+        Task <a href='/tasks#/tasks'>list</a>
+
     </div>
 }
