--- a/app/views/tasks.scala.html
+++ b/app/views/tasks.scala.html
@@ -1,5 +1,3 @@
-@(message: String)
-<!doctype html>
 <html lang="en" ng-app="myApp">
 <head>
     <meta charset="utf-8">
@@ -45,13 +43,22 @@
 <script src='@routes.WebJarAssets.at(WebJarAssets.locate("angular-route.js"))' type="text/javascript"></script>
 <script src='@routes.WebJarAssets.at(WebJarAssets.locate("ui-bootstrap.js"))' type="text/javascript"></script>
 
+
 <!-- Coffee script compilled resources-->
 <script src='@routes.Assets.at("javascripts/app.js")' type="text/javascript"></script>
 <script src='@routes.Assets.at("javascripts/common/Config.js")' type="text/javascript"></script>
 <script src='@routes.Assets.at("javascripts/directives/AppVersion.js")' type="text/javascript"></script>
 
-<script src='@routes.Assets.at("javascripts/config/ConfigService.js")' type="text/javascript"></script>
-<script src='@routes.Assets.at("javascripts/config/ConfigCtrl.js")' type="text/javascript"></script>
+<script src='@routes.Assets.at("javascripts/task/TaskService.js")' type="text/javascript"></script>
+<script src='@routes.Assets.at("javascripts/task/TaskCtrl.js")' type="text/javascript"></script>
+
+<script type="text/javascript" src="http://code.jquery.com/jquery-git2.min.js"></script>
+
+<script src='@routes.Assets.at("javascripts/main.js")' type="text/javascript"></script>
+
+<script language="javascript" type="text/javascript">
+
+</script>
 
 
 </html>
